--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   var map = L.map('map', {
     center: [49.5915611, 17.2511236], // EDIT coordinates to re-center map
     zoom: 12,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
-    scrollWheelZoom: false
+    scrollWheelZoom: true
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
