--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- Position the map and title with Cascading Style Sheet (CSS) -->
   <style>
+  @import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 2px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }
@@ -19,7 +20,7 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">Olomouc</div>
+  <div id="map-title">Moje mapa ze cvičení VYGEO</div>
   <div id="map"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
